--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_SOCKET_URL=http://tablestream-env.eba-bq9235b6.us-west-1.elasticbeanstalk.com
+NEXT_PUBLIC_SOCKET_URL=https://www.api.table-stream.com
